Update color palette. Add img & css directories.

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                             all of the above.</p>
 
                         <p class="text-center">
-                            <a href="#contact" class="getInTouch btn btn-complementary">Get In Touch</a>
+                            <a href="#contact" class="getInTouch btn btn-primary">Get In Touch</a>
                             <a href="./files/Resume-Clayton_Dewey.pdf" target="_blank"
-                                class="btn btn-complementary mx-1">Download My
+                                class="btn btn-primary mx-1">Download My
                                 Resume</a>
                         </p>
                     </article>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="card__footer">
                                 <p>HTML/CSS Experiment</p>
-                                <a href="./nfws" class="btn btn-complementary">Read More <i class="fas fa-chevron-right"
+                                <a href="./nfws" class="btn btn-primary">Read More <i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="card__footer">
                                 <p>UI/UX Design Class Project</p>
-                                <a href="./harvest-hills/" class="btn btn-complementary">Read More<i
+                                <a href="./harvest-hills/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                             </div>
                             <div class="card__footer">
                                 <p>E-Commerce Site</p>
-                                <a href="./uwbookstore/" class="btn btn-complementary">Read More<i
+                                <a href="./uwbookstore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                             </div>
                             <div class="card__footer">
                                 <p>E-Commerce Site</p>
-                                <a href="./uwalumnistore/" class="btn btn-complementary">Read More<i
+                                <a href="./uwalumnistore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
@@ -220,8 +220,8 @@
                             </div>
                             <div class="card__footer">
                                 <p>Codecademy.com React App Project</p>
-                                <a href="./jammming/" class="btn btn-complementary">Read More<i
-                                        class="fas fa-chevron-right" aria-hidden="true"></i></a>
+                                <a href="./jammming/" class="btn btn-primary">Read More<i class="fas fa-chevron-right"
+                                        aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
 
                             <input type="hidden" name="recaptcha_response" id="recaptchaResponse">
                             <div id="alert"></div>
-                            <input type="submit" id="submit-button" value="Submit Form" class="btn btn-complementary">
+                            <input type="submit" id="submit-button" value="Submit Form" class="btn btn-primary">
                             <p class="google-message">This site is protected by reCAPTCHA and the Google
                                 <a href="https://policies.google.com/privacy">Privacy Policy</a> and
                                 <a href="https://policies.google.com/terms">Terms of Service</a> apply.
