Update card, form, & header styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                     <img src="img/profile.jpeg" class="header__image-profile" alt="">
                     <h1>Clayton Dewey</h1>
                     <p class="subhead">Front End Developer</p>
-                    <p class="text-center"><i class="fab fa-jedi-order"></i></p>
+                    <p class="text-center">
+                        <i class="fab fa-jedi-order"></i>
+                        <!-- <i class="fab fa-galactic-republic"></i> -->
+                    </p>
                 </div>
 
                 <a href="#about" class="scroll-down">
@@ -130,23 +133,24 @@
 
             <!-- <section id="services">
                 <h2>Services<br><span>subhead</span></h2>
+                
             </section> -->
 
             <section id="portfolio">
                 <h2>Portfolio<br><span>My Work</span></h2>
                 <div class="row">
                     <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>Anthrax Band</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="./nfws">
                                     <img src="img/anthrax-comp.png" alt="">
                                     <div class="visually-hidden">Anthrax Band Site</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>HTML/CSS Experiment</p>
                                 <a href="./nfws" class="btn btn-primary">Read More <i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
@@ -154,17 +158,17 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>Harvest Hills</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="./harvest-hills/">
                                     <img src="img/harvestHill-comp.png" alt="">
                                     <div class="visually-hidden">Harvest Hills</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>UI/UX Design Class Project</p>
                                 <a href="./harvest-hills/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
@@ -172,17 +176,17 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>University Book Store</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="./uwbookstore/">
                                     <img src="img/bookstore-comp.png" alt="">
                                     <div class="visually-hidden">University Book Store</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>E-Commerce Site</p>
                                 <a href="./uwbookstore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
@@ -190,17 +194,17 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>UW Alumni Store</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="./uwalumnistore/">
                                     <img src="img/alumniStore-comp.png" alt="">
                                     <div class="visually-hidden">UW Alumni Store</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>E-Commerce Site</p>
                                 <a href="./uwalumnistore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
@@ -208,17 +212,17 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>Ja\m/ing</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="./jammming/">
                                     <img src="img/jammming-comp.png" alt="">
                                     <div class="visually-hidden">Ja\m/ing</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>Codecademy.com React App Project</p>
                                 <a href="./jammming/" class="btn btn-primary">Read More<i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
@@ -226,17 +230,17 @@
                         </div>
                     </div>
                     <!-- <div class="col">
-                        <div class="card">
-                            <div class="card__header">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
                                 <h3>EasyNotes App</h3>
                             </div>
-                            <div class="card__body">
+                            <div class="mdc-card--body">
                                 <a href="#">
                                     <img src="img/anthrax-comp.png" alt="">
                                     <div class="visually-hidden">EasyNotes App</div>
                                 </a>
                             </div>
-                            <div class="card__footer">
+                            <div class="mdc-card--footer">
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, delectus!</p>
                                 <a href="#" class="btn btn-complementary">Read More<i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
@@ -278,7 +282,7 @@
 
                             <input type="hidden" name="recaptcha_response" id="recaptchaResponse">
                             <div id="alert"></div>
-                            <input type="submit" id="submit-button" value="Submit Form" class="btn btn-primary">
+                            <button type="submit" id="submit-button" class="btn btn-primary">Send Message <i class="far fa-envelope"></i></button>
                             <p class="google-message">This site is protected by reCAPTCHA and the Google
                                 <a href="https://policies.google.com/privacy">Privacy Policy</a> and
                                 <a href="https://policies.google.com/terms">Terms of Service</a> apply.
