Update card styles & .gitignore

--- a/index.html
+++ b/index.html
@@ -142,111 +142,86 @@
                     <div class="col">
                         <div class="mdc-card mdc-card--outlined">
                             <div class="mdc-card--header">
-                                <h3>Anthrax Band</h3>
+                                <img src="img/anthrax-comp.png" alt="">
                             </div>
                             <div class="mdc-card--body">
-                                <a href="./nfws">
-                                    <img src="img/anthrax-comp.png" alt="">
-                                    <div class="visually-hidden">Anthrax Band Site</div>
-                                </a>
-                            </div>
-                            <div class="mdc-card--footer">
+                                <h3>Anthrax Band</h3>
                                 <p>HTML/CSS Experiment</p>
                                 <a href="./nfws" class="btn btn-primary">Read More <i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
+
                     <div class="col">
                         <div class="mdc-card mdc-card--outlined">
                             <div class="mdc-card--header">
-                                <h3>Harvest Hills</h3>
+                                <img src="img/bookstore-comp.png" alt="">
                             </div>
                             <div class="mdc-card--body">
-                                <a href="./harvest-hills/">
-                                    <img src="img/harvestHill-comp.png" alt="">
-                                    <div class="visually-hidden">Harvest Hills</div>
-                                </a>
-                            </div>
-                            <div class="mdc-card--footer">
-                                <p>UI/UX Design Class Project</p>
-                                <a href="./harvest-hills/" class="btn btn-primary">Read More<i
-                                        class="fas fa-chevron-right" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="mdc-card mdc-card--outlined">
-                            <div class="mdc-card--header">
                                 <h3>University Book Store</h3>
-                            </div>
-                            <div class="mdc-card--body">
-                                <a href="./uwbookstore/">
-                                    <img src="img/bookstore-comp.png" alt="">
-                                    <div class="visually-hidden">University Book Store</div>
-                                </a>
-                            </div>
-                            <div class="mdc-card--footer">
                                 <p>E-Commerce Site</p>
                                 <a href="./uwbookstore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
+
                     <div class="col">
                         <div class="mdc-card mdc-card--outlined">
                             <div class="mdc-card--header">
-                                <h3>UW Alumni Store</h3>
+                                <img src="img/alumniStore-comp.png" alt="">
                             </div>
                             <div class="mdc-card--body">
-                                <a href="./uwalumnistore/">
-                                    <img src="img/alumniStore-comp.png" alt="">
-                                    <div class="visually-hidden">UW Alumni Store</div>
-                                </a>
-                            </div>
-                            <div class="mdc-card--footer">
+                                <h3>UW Alumni Store</h3>
                                 <p>E-Commerce Site</p>
                                 <a href="./uwalumnistore/" class="btn btn-primary">Read More<i
                                         class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
+
                     <div class="col">
                         <div class="mdc-card mdc-card--outlined">
                             <div class="mdc-card--header">
-                                <h3>Ja\m/ing</h3>
+                                <img src="img/harvestHill-comp.png" alt="">
                             </div>
                             <div class="mdc-card--body">
-                                <a href="./jammming/">
-                                    <img src="img/jammming-comp.png" alt="">
-                                    <div class="visually-hidden">Ja\m/ing</div>
-                                </a>
+                                <h3>Harvest Hills</h3>
+                                <p>UI/UX Design Class Project</p>
+                                <a href="./harvest-hills/" class="btn btn-primary">Read More<i
+                                        class="fas fa-chevron-right" aria-hidden="true"></i></a>
                             </div>
-                            <div class="mdc-card--footer">
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="mdc-card mdc-card--outlined">
+                            <div class="mdc-card--header">
+                                <img src="img/jammming-comp.png" alt="">
+                            </div>
+                            <div class="mdc-card--body">
+                                <h3>Ja\m/ing</h3>
                                 <p>Codecademy.com React App Project</p>
                                 <a href="./jammming/" class="btn btn-primary">Read More<i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col">
+
+                    <div class="col">
                         <div class="mdc-card mdc-card--outlined">
                             <div class="mdc-card--header">
-                                <h3>EasyNotes App</h3>
+                                <img src="img/anthrax-comp.png" alt="">
                             </div>
                             <div class="mdc-card--body">
-                                <a href="#">
-                                    <img src="img/anthrax-comp.png" alt="">
-                                    <div class="visually-hidden">EasyNotes App</div>
-                                </a>
-                            </div>
-                            <div class="mdc-card--footer">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, delectus!</p>
-                                <a href="#" class="btn btn-complementary">Read More<i class="fas fa-chevron-right"
+                                <h3>EasyNotes App</h3>
+                                <p>Lorem ipsum, dolor adipisicing elit.</p>
+                                <a href="#" class="btn btn-primary">Read More<i class="fas fa-chevron-right"
                                         aria-hidden="true"></i></a>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
 
             </section>
